# slack-process-server

./: README.md  slack-process-server.cabal  stack.yaml
src/Network/RTM/Slack/: Maintainer.hs  Server.hs
